--- a/package.json
+++ b/package.json
@@ -1,11 +1,31 @@
 {
-  "name": "vue3-draggable-resizable",
+  "name": "vue3-ts-draggable-resizable",
+  "author": "Jackie Tang <495473393@qq.com>",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/tanghaojie/vue3-draggable-resizable.git"
+  },
+  "license": "MIT",
+  "homepage": "https://github.com/tanghaojie/vue3-draggable-resizable",
+  "keywords": [
+    "vue3",
+    "typescript",
+    "component",
+    "dragabble",
+    "resizable"
+  ],
+  "main": "dist/Vue3DraggableResizable.umd.min.js",
+  "unpkg": "dist/Vue3DraggableResizable.umd.min.js",
+  "browser": {
+    "./sfc": "src/vue3-draggable-resizable.vue"
+  },
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "build-bundle": "vue-cli-service build --target lib --name Vue3DraggableResizable ./src/index.js"
   },
   "dependencies": {
     "core-js": "^3.6.5",
